# whiskey

./: .gitignore  README.md  manage.py  open_serial.py  pixels_example.py  pixels_service.py  pyproject.toml
arduino/: arduino.ino
frontend/: package-lock.json  package.json  rollup.config.js
frontend/src/: App.svelte  ColorPicker.svelte  HueSaturationPicker.svelte  colors.js  styles.js  utils.js
whiskey/: asgi.py  settings.py  urls.py  wsgi.py
whiskey/api/: apps.py  consumers.py  routing.py  views.py
whiskey/app/: apps.py  views.py
whiskey/templates/app/: index.html
