[tool.poetry]
name = "whiskey"
version = "0.1.0"
description = ""
authors = ["Maximilian Linhoff <maximilian.linhoff@tu-dortmund.de>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
whitenoise = "^6.2.0"
djangorestframework = "^3.14.0"
pyserial = "^3.5"


[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"
msgpack = "^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
